--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
         <div class="section-title" data-aos="zoom-out">
           <h2>Portfolio</h2>
-          <p>What we've done</p>
+          <p>Produtos</p>
         </div>
 
         <ul id="portfolio-flters" class="d-flex justify-content-end" data-aos="fade-up">
@@ -410,8 +410,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
+              <h4>Batatas</h4>
+              <p>tipos de batata</p>
               <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
