--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">Festival da batata</a></h1>
+        <h1 class="text-light"><a href="index.html"></a>Festa Da Batata</h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+       <!-- <a href="index.html"><img src="assets/img/logo.PNG" alt="" class="img-fluid"></a> -->
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -72,16 +72,14 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Assine já seu <span>Nome</span></h2>
-          <p class="animate__animated fanimate__adeInUp">A assinatura do livro de visitas é de grande importância para o evento, especialmente para podermos solicitar fundos junto ao governo, comprovando a frequência de visitação do mesmo.</p>
-          <a href="registro.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">ASSINAR</a>
-        </div>
+        <div class="portfolio-img"><img src="assets/img/miçan.jpg" class="img-fluid" alt=""></div>
+          </div>
       </div>
 
       <!-- Slide 2 -->
       <div class="carousel-item">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
+          <div class="carousel-container">
+          <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
           <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
@@ -89,10 +87,10 @@
 
       <!-- Slide 3 -->
       <div class="carousel-item">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+         <div class="carousel-container">
+          <h2 class="animate__animated animate__fadeInDown">Assine já seu <span>Nome</span></h2>
+          <p class="animate__animated fanimate__adeInUp">A assinatura do livro de visitas é de grande importância para o evento, assim teremos um contole melhor dos participantes. </p>
+          <a href="registro.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">ASSINAR</a>
         </div>
       </div>
 
@@ -139,22 +137,13 @@
         <div class="row content" data-aos="fade-up">
           <div class="col-lg-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              A festividade, que ocorre anualmente é uma atividade cultural realizada para celebrar os plantios provindos da agricultura familiar, em especial a colheita da batata, bem como para fortalecer a cultura indígena. Protagonizada pelos indígenas potiguaras do Catu, a festa contou com atividades nos três turnos, estendendo-se até quase o amanhecer.
             </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-            </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+               Teve maratona, oficina de tiro de arco e flecha, exposição de artesanato indígena, pintura corporal, almoço e jantar comunitário, bingo, concurso gastronômico de batata doce, apresentações culturais e de grupos musicais, bem como mesas redondas com relatos de experiências e histórias culturais.
             </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
           </div>
         </div>
 
@@ -376,16 +365,9 @@
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
-          <h2>Portfolio</h2>
-          <p>Produtos</p>
+          <h2>Produtos</h2>
+          <p>Portfólio</p>
         </div>
-
-        <ul id="portfolio-flters" class="d-flex justify-content-end" data-aos="fade-up">
-          <li data-filter="*" class="filter-active">All</li>
-          <li data-filter=".filter-app">App</li>
-          <li data-filter=".filter-card">Card</li>
-          <li data-filter=".filter-web">Web</li>
-        </ul>
 
         <div class="row portfolio-container" data-aos="fade-up">
 
