--- a/registro.html
+++ b/registro.html
@@ -38,19 +38,38 @@
   <body class="text-center">
     
 <main class="form-signin">
-  <form>
-    <!--Coloar logo-->
-    <img class="mb-4" src="assets/img/batata.jpg" alt="" width="72" height="57">
-    <h1 class="h3 mb-3 fw-normal">assinatura</h1>
-    <label for="inputEmail" class="visually-hidden">Nome completo</label>
-    <input type="text" id="inputEmail" class="form-control" placeholder="Nome completo" required autofocus>
-    <label for="inputEmail" class="visually-hidden">E-mail</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="E-mail" required>
-    
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Assinar</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
-  </form>
+  <form class="row g-3">
+    <div class="col-md-6">
+      <label for="inputEmail4" class="form-label">Email</label>
+      <input type="email" class="form-control" id="inputEmail4">
+    </div>
+    <div class="col-md-6">
+      <label for="inputPassword4" class="form-label">senha</label>
+      <input type="password" class="form-control" id="inputPassword4">
+    </div>
+    <div class="col-12">
+      <label for="inputAddress" class="form-label">endereço</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    </div>
   
+    <div class="col-12">
+      <label for="inputAddress" class="form-label">endereço</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    </div>
+    <div class="col-12">
+      <label for="inputAddress" class="form-label">ESTADOS</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    </div>
+    <div class="col-12">
+      <label for="inputAddress" class="form-label">CEP</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    </div>
+    <div class="col-12">
+    </div>
+    <div class="col-12">
+      <button type="submit" class="btn btn-primary">Sign in</button>
+    </div>
+  </form>
 </main>
 
 
