--- a/registro.html
+++ b/registro.html
@@ -40,30 +40,27 @@
 <main class="form-signin">
   <form class="row g-3">
     <div class="col-md-6">
-      <label for="inputEmail4" class="form-label">Email</label>
+      <label for="inputEmail4" class="form-label">endereço</label>
       <input type="email" class="form-control" id="inputEmail4">
     </div>
     <div class="col-md-6">
-      <label for="inputPassword4" class="form-label">senha</label>
-      <input type="password" class="form-control" id="inputPassword4">
+      <label for="inputPassword4" class="form-label">NOME COMPLETO</label>
+      <input type="text" class="form-control" id="inputPassword4">
     </div>
     <div class="col-12">
-      <label for="inputAddress" class="form-label">endereço</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+      <label for="inputAddress" class="form-label">CPF</label>
+      <input type="number" class="form-control" id="inputAddress" placeholder="1234 Main St">
     </div>
   
     <div class="col-12">
-      <label for="inputAddress" class="form-label">endereço</label>
+      <label for="inputAddress" class="form-label">CIDADE</label>
       <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
     </div>
     <div class="col-12">
-      <label for="inputAddress" class="form-label">ESTADOS</label>
+      <label for="inputAddress" class="form-label">SENHA/label>
       <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
     </div>
-    <div class="col-12">
-      <label for="inputAddress" class="form-label">CEP</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-    </div>
+    
     <div class="col-12">
     </div>
     <div class="col-12">
