--- a/registro.html
+++ b/registro.html
@@ -40,25 +40,25 @@
 <main class="form-signin">
   <form class="row g-3">
     <div class="col-md-6">
-      <label for="inputEmail4" class="form-label">endereço</label>
+      <label for="inputEmail4" class="form-label">NOME</label>
       <input type="email" class="form-control" id="inputEmail4">
     </div>
     <div class="col-md-6">
-      <label for="inputPassword4" class="form-label">NOME COMPLETO</label>
+      <label for="inputPassword4" class="form-label">CPF</label>
       <input type="text" class="form-control" id="inputPassword4">
     </div>
     <div class="col-12">
-      <label for="inputAddress" class="form-label">CPF</label>
-      <input type="number" class="form-control" id="inputAddress" placeholder="1234 Main St">
+      <label for="inputAddress" class="form-label">ENDEREÇO</label>
+      <input type="number" class="form-control" id="RUA..." placeholder="1234 Main St">
     </div>
   
     <div class="col-12">
       <label for="inputAddress" class="form-label">CIDADE</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+      <input type="text" class="form-control" id="inputAddress" placeholder="CIDADE">
     </div>
     <div class="col-12">
-      <label for="inputAddress" class="form-label">SENHA/label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+      <label for="inputAddress" class="form-label">SENHA
+      <input type="text" class="form-control" id="inputAddress" placeholder="*********">
     </div>
     
     <div class="col-12">
