--- a/index.html
+++ b/index.html
@@ -45,16 +45,15 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-<<<<<<< Updated upstream
+
         <h1 class="text-light"><a href="index.html"></a>Festa Da Batata</h1>
         <!-- Uncomment below if you prefer to use an image logo -->
        <!-- <a href="index.html"><img src="assets/img/logo.PNG" alt="" class="img-fluid"></a> -->
-=======
+
         
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-        <a href="index.html"><img src="assets/img/festa.png" alt="" class="img-fluid"></a>
->>>>>>> Stashed changes
+        
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -79,9 +78,9 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">ASSINE JÁ</h2>
-          <p class="animate__animated animate__fadeInUp">Atualmente vivem 142 famílias, 726 pessoas autodeclaradas indígenas e, em sua maior parte a agricultura é a atividade econômica que predomina. Cultivando feijão, milh </p>
-          <a href="registro.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+          <h2 class="animate__animated animate__fadeInDown">Festividade</h2>
+          <p class="animate__animated animate__fadeInUp"> Os Potiguaras do Catu realizam anualmente, no dia de todos os santos, primeiro de novembro, a Festa da Batata. Um evento que demonstra a articulação e força indígena para se relacionar com instituições, grupos e situações diversas, como a necessidade de transformar os hábitos de caçadores coletores para agricultores devido à destruição ambiental perpetrada pela monocultura de cana de açúcar que remonta os primórdios das relações interétnicas entre europeus e indígenas.</p>
+          <a href="registro.html" classf="btn-get-started animate__animated animate__fadeInUp scrollto">Cadastro</a>
         </div>
       </div>
 
