--- a/registro.html
+++ b/registro.html
@@ -49,7 +49,7 @@
     </div>
     <div class="col-12">
       <label for="inputAddress" class="form-label">ENDEREÇO</label>
-      <input type="number" class="form-control" id="RUA..." placeholder="1234 Main St">
+      <input type="text" class="form-control" id="RUA..." placeholder="ENDEREÇO">
     </div>
   
     <div class="col-12">
@@ -64,7 +64,7 @@
     <div class="col-12">
     </div>
     <div class="col-12">
-      <button type="submit" class="btn btn-primary">Sign in</button>
+      <button type="submit" class="btn btn-primary">Cadastrar</button>
     </div>
   </form>
 </main>
